--- a/auth_service/pom.xml
+++ b/auth_service/pom.xml
@@ -80,6 +80,13 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- Swagger/OpenAPI -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.6.0</version>
+		</dependency>
+
 		<!-- JWT -->
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
