--- a/auth_service/pom.xml
+++ b/auth_service/pom.xml
@@ -80,6 +80,14 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+
+		</dependency>
+
 		<!-- Swagger/OpenAPI -->
 		<dependency>
 			<groupId>org.springdoc</groupId>
@@ -105,12 +113,12 @@
 			<version>0.11.5</version>
 			<scope>runtime</scope>
 		</dependency>
-	    <dependency>
-      <groupId>com.h2database</groupId>
-      <artifactId>h2</artifactId>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
