--- a/auth_service/Jenkinsfile
+++ b/auth_service/Jenkinsfile
@@ -36,7 +36,7 @@ pipeline{
                 docker run -d \
                     --name auth_service \
                     -p 8081:8080 \
-                    auth_service:latest
+                    auth_service::${IMAGE_TAG}
                 '''
             }
         }
