--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   mysql:
@@ -8,27 +8,34 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: kiubit_auth
-      MYSQL_USER: kiubit
-      MYSQL_PASSWORD: kiubittest
+      MYSQL_USER: root
+      MYSQL_PASSWORD: root
     ports:
       - 3307:3306
     volumes:
-      - kiubit_mysql_data:/var/lib/mysql
+      - kiubit_mysql-data:/var/lib/mysql
+    healthcheck:
+      test:
+        ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-proot"]
+      interval: 10s
+      timeout: 5s
+      retries: 10
 
   auth_service:
     build: ./auth_service
     container_name: kiubit_auth_service
     ports:
-      - 8080:8080
+      - 8081:8080
     environment:
       SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/kiubit_auth?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-      SPRING_DATASOURCE_USERNAME: kiubit
-      SPRING_DATASOURCE_PASSWORD: kiubittest
+      SPRING_DATASOURCE_USERNAME: root
+      SPRING_DATASOURCE_PASSWORD: root
       JWT_SECRET: ${JWT_SECRET:-aGk3NmRmOHNkZjg3c2RmODdzZGY4N3NkZjg3c2RmODdzZGY4N3NkZjg3c2RmODdzZGY4N3NkZjg3c2RmODdzZGY4N3NkZjg3c2RmODdzZGY4N3NkZjg3c2RmODdzZGY4N3NkZg==}
       JWT_EXPIRATIONMS: 3600000
       JWT_REFRESHEXPIRATIONMS: 86400000
     depends_on:
-      - mysql
+      mysql:
+        condition: service_healthy
     # Puedes ajustar healthcheck, logging, profiles, etc. aquí si quieres
 
 # Puedes agregar más microservicios aquí (ejemplo):
@@ -37,4 +44,5 @@ services:
 #    ...
 
 volumes:
-  kiubit_mysql_data:
+  kiubit_mysql-data:
+    external: true
