--- a/auth_service/Jenkinsfile
+++ b/auth_service/Jenkinsfile
@@ -36,8 +36,8 @@ pipeline{
         stage('Deploy Auth Service') {
             steps {
                 sh '''
-                docker compose down
-                docker compose up -d --build
+                docker-compose down
+                docker-compose up -d --build
                 '''
             }
         }
